feat: add Claude code review with comprehensive GitHub Actions workflow
Enhances PR validation with AI-powered code review capabilities and automated
comment management. Includes helper scripts for thread resolution and comment
minimization, supports sticky comments, and integrates with existing validation
checks.

Enables configurable bot permissions and graceful fallbacks when Claude is not
configured, maintaining workflow stability while providing enhanced review
capabilities when available.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,12 +7,32 @@ on:
         description: Run in dry-run mode (preview only)
         type: boolean
         default: false
+      app-bot-name:
+        description: GitHub App bot login name (e.g., 'my-app[bot]')
+        type: string
+        required: false
+      app-bot-id:
+        description: GitHub App bot ID for Claude Code Action
+        type: string
+        required: false
+      skip-claude-review:
+        description: Skip Claude Code review for this run
+        type: boolean
+        default: false
+      claude-review-allowed-bots:
+        description: Comma-separated list of bot names allowed to trigger review, or "*" for all
+        type: string
+        default: "*"
     secrets:
       APP_ID:
         required: true
       APP_PRIVATE_KEY:
         required: true
       SAVVYWEB_NPM_AUTH_TOKEN:
+        required: false
+      CLAUDE_CODE_OAUTH_TOKEN:
+        required: false
+      CLAUDE_REVIEW_PAT:
         required: false
 
 jobs:
@@ -63,6 +83,10 @@ jobs:
     with:
       phase: ${{ needs.control.outputs.phase }}
       dry-run: ${{ inputs.dry-run }}
+      app-bot-name: ${{ inputs.app-bot-name }}
+      app-bot-id: ${{ inputs.app-bot-id }}
+      skip-claude-review: ${{ inputs.skip-claude-review }}
+      claude-review-allowed-bots: ${{ inputs.claude-review-allowed-bots }}
     secrets: inherit
 
   publish:
