ci: updates to release dispatcher pattern

--- a/.github/workflows/release-branch.yml
+++ b/.github/workflows/release-branch.yml
@@ -12,7 +12,10 @@ on:
         required: true
       APP_PRIVATE_KEY:
         required: true
-      SAVVYWEB_NPM_AUTH_TOKEN:
+      CUSTOM_REGISTRIES:
+        description: |
+          Custom registry authentication (one per line).
+          Format: https://registry.example.com/_authToken=TOKEN
         required: false
 
 jobs:
@@ -42,5 +45,4 @@ jobs:
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           dry-run: ${{ inputs.dry-run }}
-          custom-registries: |
-            https://registry.savvyweb.dev/${{ secrets.SAVVYWEB_NPM_AUTH_TOKEN }}
+          custom-registries: ${{ secrets.CUSTOM_REGISTRIES }}
