--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -16,7 +16,14 @@ on:
         required: true
       APP_PRIVATE_KEY:
         required: true
-      SAVVYWEB_NPM_AUTH_TOKEN:
+      ANTHROPIC_API_KEY:
+        required: false
+      CLAUDE_REVIEW_PAT:
+        required: false
+      CUSTOM_REGISTRIES:
+        description: |
+          Custom registry authentication (one per line).
+          Format: https://registry.example.com/_authToken=TOKEN
         required: false
 
 jobs:
@@ -47,5 +54,4 @@ jobs:
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           dry-run: ${{ inputs.dry-run }}
-          custom-registries: |
-            https://registry.savvyweb.dev/${{ secrets.SAVVYWEB_NPM_AUTH_TOKEN }}
+          custom-registries: ${{ secrets.CUSTOM_REGISTRIES }}
